<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Human or Character Quiz</string>
    <string name="quiz_title">Are you a Human or a Character?</string>
    <string name="quiz_description">Are you a resident of Earth or your imagination? Take the quiz to find out how much human flesh suits you!</string>
    <string name="name_question">What is your name, dear wanderer?</string>
    <string name="hint">Enter your name</string>
    <string name="results">Who am I?</string>
    <string name="score">Your human score is: <xliff:g id="score_id" example="50">%d</xliff:g>%%</string>
    <string name="question_one">1. What do you do in your free time?</string>
    <string name="one_1">Social media or friends</string>
    <string name="one_2">Novels, games or movies at home</string>
    <string name="one_3">Household chores, pets, working or studying</string>
    <string name="question_two">2. Select your favorite job industry:</string>
    <string name="two_1">Media (Fiction), Technology (Entertainment) or Arts</string>
    <string name="two_2">Media (News), Technology (Not Entertainment) Teaching or Business</string>
    <string name="two_3">Law Enforcement, Medical, Military or Sports</string>
    <string name="question_three">3. Are you observant of your surroundings or immersed in your own thoughts?</string>
    <string name="three_1">Observant</string>
    <string name="three_2">Immersed</string>
    <string name="three_3">Both/None</string>
    <string name="question_four">4. Are you an introvert or an extrovert?</string>
    <string name="four_1">Ambivert</string>
    <string name="four_2">Extrovert</string>
    <string name="four_3">Introvert</string>
    <string name="question_five">5. Select your favorite book/movie genre:</string>
    <string name="five_1">Fiction (Fantasy, Mythology, Comics, Horror etc.)</string>
    <string name="five_2">Non-fiction (Biography, History, Self-help, Business etc.)</string>
    <string name="five_3">Both/None</string>
    <string name="question_six">6. Who is your best friend?</string>
    <string name="six_1">Colleagues/Classmates or family</string>
    <string name="six_2">Toys or imaginary friends</string>
    <string name="six_3">Online friends or pets</string>
    <string name="question_seven">7. What is your favorite holiday?</string>
    <string name="seven_1">Summer, Easter, Thanksgiving or April Fool\'s</string>
    <string name="seven_2">Christmas/New Year\'s Day or Halloween</string>
    <string name="seven_3">National, Labor, Father\'s/Mother\'s or Valentine\'s Day</string>
    <string name="question_eight">8. Would you act differently if the world was also different?</string>
    <string name="eight_1">Yes</string>
    <string name="eight_2">No</string>
    <string name="eight_3">I don\'t know</string>
    <string name="question_nine">9. Which are your favorite school subjects?</string>
    <string name="nine_1">Languages, Psychology, Sociology, Dance, Computers</string>
    <string name="nine_2">Physical Education, Science, History, Geography</string>
    <string name="nine_3">Arts, Music, Dramatics</string>
    <string name="question_ten">10. If you could change the world, how much would you change?</string>
    <string name="ten_1">Almost Nothing</string>
    <string name="ten_2">Only some things</string>
    <string name="ten_3">Almost Everything</string>
    <string name="very_human_title"><xliff:g id="name" example="Maria">%s</xliff:g>, the Pure Earthling!</string>
    <string name="very_human">You are completely normal! You know how to play by Earth\'s rules and you don\'t have a problem fitting in. Enjoy life as it is!</string>
    <string name="human_title"><xliff:g id="name" example="Maria">%s</xliff:g>, the Earthling!</string>
    <string name="human">You are a normal person! Although your identity is as you thought up to now, there are a few things you would choose to fix about the world if you could.</string>
    <string name="unsure_title"><xliff:g id="name" example="Maria">%s</xliff:g>, the Hybrid!</string>
    <string name="unsure">You are a hybrid! You don\'t belong in only one category and you don\'t have to. Life isn\'t good or bad nor easy to define.</string>
    <string name="character_title"><xliff:g id="name" example="Maria">%s</xliff:g>, the Hero!</string>
    <string name="character">Fortunately or not, \"human\" isn\'t the right identity for you! There is something wrong in this world and you\'d make a great hero in a story!</string>
    <string name="very_character_title"><xliff:g id="name" example="Maria">%s</xliff:g>, the Pure Hero!</string>
    <string name="very_character">You are the king/queen of your imagination! If you put your ideas into practice, the world would be a truly unique place to live. Start creating!</string>
    <string name="email">I want to share my results via e-mail before quitting!</string>
    <string name="quit">Quit</string>
    <string name="radiobuttons_toast">Please answer all questions.</string>
    <string name="name_toast">Please enter a name.</string>

</resources>
