<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.humanorcharacterquiz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_distance"
            android:layout_marginEnd="@dimen/large_distance"
            android:layout_marginStart="@dimen/large_distance"
            android:layout_marginTop="@dimen/small_distance"
            android:gravity="center"
            android:text="@string/quiz_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/human_or_character" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/small_distance">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_distance"
                android:text="@string/quiz_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:text="@string/question_one"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/one_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_1" />

                <RadioButton
                    android:id="@+id/one_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_2" />

                <RadioButton
                    android:id="@+id/one_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_two"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/two_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_1" />

                <RadioButton
                    android:id="@+id/two_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_2" />

                <RadioButton
                    android:id="@+id/two_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_three"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/three_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three_1" />

                <RadioButton
                    android:id="@+id/three_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three_2" />

                <RadioButton
                    android:id="@+id/three_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_four"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/four_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four_1" />

                <RadioButton
                    android:id="@+id/four_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four_2" />

                <RadioButton
                    android:id="@+id/four_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_five"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/five_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_1" />

                <RadioButton
                    android:id="@+id/five_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_2" />

                <RadioButton
                    android:id="@+id/five_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_six"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/six_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_1" />

                <RadioButton
                    android:id="@+id/six_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_2" />

                <RadioButton
                    android:id="@+id/six_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_seven"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/seven_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_1" />

                <RadioButton
                    android:id="@+id/seven_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_2" />

                <RadioButton
                    android:id="@+id/seven_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_eight"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/eight_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_1" />

                <RadioButton
                    android:id="@+id/eight_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_2" />

                <RadioButton
                    android:id="@+id/eight_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_nine"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/nine_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nine_1" />

                <RadioButton
                    android:id="@+id/nine_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nine_2" />

                <RadioButton
                    android:id="@+id/nine_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nine_3" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_distance"
                android:layout_marginTop="@dimen/small_distance"
                android:text="@string/question_ten"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ten_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_1" />

                <RadioButton
                    android:id="@+id/ten_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_2" />

                <RadioButton
                    android:id="@+id/ten_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_3" />

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_distance"
                android:onClick="showResults"
                android:text="@string/results" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/small_distance">

                <ImageView
                    android:id="@+id/image_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:adjustViewBounds="true" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/small_distance">

                    <TextView
                        android:id="@+id/human_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#B71C1C" />

                    <TextView
                        android:id="@+id/quiz_results_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quiz_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>





